scrollbar fix

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -12,7 +12,7 @@
 @ui-bg:     hsl(0, 0%, 83%);
 @ui-border: darken(@ui-bg, 16%);
 
-@ui-syntax-color: hsl(225, 3%, 28%);
+@ui-syntax-color: hsl(225, 0%, 100%);
 
 
 
